--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                                         <th scope="col">Name</th>
                                         <th scope="col">Department</th>
                                         <th scope="col">Salary</th>
-                                        <th scope="col">Id</th>
+                                        <th scope="col">ID</th>
                                         
                                       </tr>
                                     </thead>
